--- a/webapp/templates/classifynews.html
+++ b/webapp/templates/classifynews.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../templates/css/animate.css">
   <link rel="stylesheet" href="../templates/css/style.css">
   <link rel="stylesheet" type="text/css" media="print" href="print.css">
-  <title>Books Recommendation Engine</title>
+  <title>News Classification Engine</title>
 </head>
 
 <body data-spy="scroll" data-target=".site-nav" data-offset="55">
@@ -18,7 +18,7 @@
     <nav  class="site-nav family-sans navbar text-uppercase navbar-expand-md  navbar-dark fixed-top ">
 
     <div class="container-fluid">   
-        <a class="navbar-brand" href="#page-hero"><i class="fas fa-cube"></i>&nbsp;Recommender</a>
+        <a class="navbar-brand" href="#page-hero"><i class="fas fa-cube"></i>&nbsp;News Classifier</a>
         
         <button type="button" class="navbar-toggler"  data-toggle="collapse" data-target="#myTogglerNav"
         aria-controls="#myTogglerNav" aria-label="Toggle Navigation"        
@@ -55,7 +55,7 @@
                   <label><h2>News Classifier Ver 1.0</h2></label>
             </div>
             <div class="form-group">
-               <label><p>Type news text box and hit submit button to display to get news category</p></label>
+               <label><p>Type news in text box and hit submit button to display to get news category</p></label>
                
               </div>
             <div class="form-group text-left">
